--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/RamonValk/matrix-web-interface#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "nodejs": "0.0.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "shelljs": "^0.8.4"
   }
 }
